[package]
name = "frog_quest_battle"
version = "0.1.0"
authors = ["Remi Bernotavicius <remi@abort.cc>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy = "0.6"
bevy_ggrs = "0.1.3"
ggrs = "0.8"
bmp = "*"
console_error_panic_hook = "*"
euclid = "*"
js-sys = "*"
log = "*"
matchbox_socket = { version = "0.3", features = ["ggrs-socket"] }
wasm-bindgen = "*"
wasm-bindgen-futures = "*"
wasm-logger = "*"

[dependencies.web-sys]
version = "*"
features = [
  "Blob",
  "Document",
  "Element",
  "Event",
  "EventTarget",
  "HtmlCanvasElement",
  "HtmlInputElement",
  "KeyboardEvent",
  "MessageEvent",
  "Window",
]
