[package]
name = "frog_quest_battle"
version = "0.1.0"
authors = ["Remi Bernotavicius <remi@abort.cc>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy = "0.6"
bevy_ggrs = "0.1.3"
bincode = "*"
bmp = "*"
console_error_panic_hook = "*"
enumset = "*"
euclid = { version = "*", features = ["serde"] }
ggrs = "0.8"
js-sys = "*"
log = "*"
matchbox_socket = { version = "0.3", features = ["ggrs-socket"] }
num-traits = "*"
wasm-bindgen = "*"
wasm-bindgen-futures = "*"
wasm-logger = "*"
gilrs = { version = "*", features = ["wasm-bindgen"] }
serde = "*"

[dependencies.web-sys]
version = "*"
features = [
  "Blob",
  "BlobPropertyBag",
  "Document",
  "Element",
  "Event",
  "EventTarget",
  "HtmlCanvasElement",
  "HtmlInputElement",
  "KeyboardEvent",
  "Location",
  "MessageEvent",
  "Url",
  "Window",
]
